# synthetic-cover-text-generator

./: .gitignore  .rsyncignore  README.md  pyproject.toml  run.sh  sync_env_and_out_from_cluster.sh  sync_env_and_output_from_cluster.sh  sync_env_from_cluster.sh  sync_to_cluster.sh
data/: README.md  first_run_log.json
fine_tuned_models/: README.md
generated_samples/: samples.txt  samples_1.txt  samples_2.txt  samples_3.txt  samples_4.txt  samples_5.txt  samples_6.txt  samples_7.txt  samples_8.txt  samples_9.txt
slurm_output/: slurm-383993.out  slurm-383994.out  slurm-384002.out  slurm-384018.out  slurm-384021.out  slurm-384023.out  slurm-384062.out  slurm-384063.out  slurm-384066.out  slurm-384067.out  slurm-384070.out  slurm-384075.out  slurm-384076.out  slurm-384080.out  slurm-384081.out  slurm-384090.out  slurm-386871.out  slurm-386872.out  slurm-386873.out  slurm-386896.out  slurm-386897.out  slurm-386929.out  slurm-386957.out  slurm-386959.out  slurm-386971.out  slurm-386976.out  slurm-391170.out  slurm-391171.out  slurm-391254.out  slurm-391280.out  slurm-391282.out  slurm-391292.out  slurm-391539.out  slurm-391618.out  slurm-391713.out  slurm-391757.out  slurm-391774.out  slurm-391800.out  slurm-391886.out  slurm-391889.out  (+29 more)
src/: check_eos_token.py  check_sample_lengths.py  data_loading.py  download_dataset.py  explore_dataset.py  generate_synthetic_cover_text.py  hello_world.py  plot_loss.py  prob_dist.py  train_lora.py  txt_to_json.py  vibe_check.py
